<resources>
    <string name="app_name">阁中座</string>
    <string name="login">登录</string>
    <string name="loging">正在登录...</string>
    <string name="scan_sit">扫码入座</string>
    <string name="change_avatar">更改头像</string>
    <string name="app_name_temp">不占座</string>
    <string name="department">学院</string>
    <string name="major">专业</string>
    <string name="name">姓名</string>
    <string name="intro">个人信息</string>
    <string name="post">学习社区</string>
    <string name="reserve_seat">查看座位</string>
    <string name="reserve">预约</string>
    <string name="seat_number">入座次数</string>
    <string name="seat_numberError">在线时长</string>
    <string name="name_content">李林浪</string>
    <string name="signature">Android坚挺不倒！</string>
    <string name="oneFloor">一楼</string>
    <string name="twoFloor">二楼</string>
    <string name="time_temp">10:00</string>
    <string name="sit_time">持续时间</string>
    <string name="createCode">生成二维码</string>
    <string name="qb_content">二维码内容</string>
    <string name="create">创建</string>
    <string name="jump">跳过</string>
    <string name="num">学号</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="myState">我的状态</string>
    <string name="state_time">累计时长：</string>
    <string name="text_name">姓名：</string>
    <string name="seat_num">座位号：</string>
    <string name="end_time">离座时间：</string>
    <string name="leave_sit">离座</string>
    <string name="ip">IP地址：</string>
    <string name="confirm">确定</string>
    <string name="pause">暂离</string>
    <string name="cancle_pause">返回</string>
    <string name="help_seat">当前座位处于空闲状态，此时点击该座位可实现预约</string>
    <string name="help_occupy">当前座位处于占用状态，当扫描处于此状态下的座位时会向后台推送一条请求信息，由管理员决定是否释放并重新分配座位</string>
    <string name="help_reserve">当前座位处于预约或暂离状态，此时座位无法被扫描，当15分钟后还未扫码上座或者取消暂离，则座位将自动释放</string>
    <string name="seat_state">座位状态</string>
    <string name="talk_some">说点什么？</string>
    <string name="replay">发布</string>
    <string name="title">用什么标题？</string>
    <string name="nick_name">你要什么昵称？</string>
    <string name="edit_info_note">注意：一个月只能修改一次昵称</string>
    <string name="edit_info">修改</string>
    <string name="edit_signature">说点什么？</string>
    <string name="loading">......</string>
</resources>
