<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/edit_mine">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_info_note"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/edit_changeNick"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:background="@drawable/edit_replay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="60dp"
        android:hint="@string/nick_name"
        android:textSize="12sp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"/>

    <Button
        android:id="@+id/butt_changeNick"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:background="@color/transparent"
        android:layout_marginStart="10dp"
        android:text="@string/edit_info"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/edit_changeNick"
        app:layout_constraintStart_toEndOf="@id/edit_changeNick"/>

</android.support.constraint.ConstraintLayout>